src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/NVScissorExclusive_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVScissorExclusive_StringErrorContext.class */
public final class NVScissorExclusive_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglScissorExclusiveArrayvNV(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVScissorExclusiveErrorContext");
        methods.put("glScissorExclusiveArrayvNV(ILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVScissorExclusiveErrorContext");
        methods.put("glScissorExclusiveNV(IIII)V", "net/labymod/core/laby3d/opengl/error/generated/NVScissorExclusiveErrorContext");
        methods.put("glScissorExclusiveArrayvNV(I[I)V", "net/labymod/core/laby3d/opengl/error/generated/NVScissorExclusiveErrorContext");
        return methods;
    }
}
